@@ -1,0 +1,18 @@
+<!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!-- $Id$ -->
+<html>
+<head>
+<title>Tapestry: Web Application Framework</title>
+</head>
+<body>
+
+<p>The change event mechanism used by pages and components to communicate
+changes to persistent page properties to the 
+{@link com.primix.tapestry.IEngine}.  How the engine
+persistently stores these values is not relevant (here), though its
+safe to bet it involves a {@link com.primix.tapestry.IPageRecorder}.
+
+@author Howard Ship <a href="mailto:hship@primix.com">hship@primix.com</a>
+
+</body>
+</html>
