@@ -1,3 +1,8 @@
+* Aug 17 2001 hship
+
+Change Makefile to enable the Tapestry inspector for the Extranet site.
+
+
 * Aug 15 2001 hship
 
 Release 1.0.4
